# risk-rules-project

./: README.md  main.py  pyproject.toml  settings.py
helpers/: generic.py  strategy.py
rules/: real_estate.py  salary.py
strategies/: cashout.py  debt.py
